test/development/acceptance/__snapshots__/ReactRefreshLogBox.test.ts.snap
// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ReactRefreshLogBox default boundaries 1`] = `
"FunctionDefault.js (1:50) @ FunctionDefault

> 1 | export default function FunctionDefault() { throw new Error('no'); }
    |                                                  ^"
`;

exports[`ReactRefreshLogBox default conversion to class component (1) 1`] = `
"Child.js (5:18) @ ClickCount.render

  3 |   export default class ClickCount extends Component {
  4 |     render() {
> 5 |       throw new Error()
    |            ^
  6 |     }
  7 |   }
  8 | "
`;

exports[`ReactRefreshLogBox default css syntax errors 1`] = `
"./index.module.css:1:1
Syntax error: Selector \\"button\\" is not pure (pure selectors must contain at least one local class or id)

> 1 | button {}
    | ^"
`;

exports[`ReactRefreshLogBox default logbox: anchors links in error messages 1`] = `"Error: end http://nextjs.org"`;

exports[`ReactRefreshLogBox default logbox: anchors links in error messages 2`] = `"http://nextjs.org/"`;

exports[`ReactRefreshLogBox default logbox: anchors links in error messages 3`] = `"Error: http://nextjs.org start"`;

exports[`ReactRefreshLogBox default logbox: anchors links in error messages 4`] = `"http://nextjs.org/"`;

exports[`ReactRefreshLogBox default logbox: anchors links in error messages 5`] = `"Error: middle http://nextjs.org end"`;

exports[`ReactRefreshLogBox default logbox: anchors links in error messages 6`] = `"http://nextjs.org/"`;

exports[`ReactRefreshLogBox default logbox: anchors links in error messages 8`] = `"http://nextjs.org/"`;

exports[`ReactRefreshLogBox default logbox: anchors links in error messages 9`] = `"http://example.com/"`;

exports[`ReactRefreshLogBox default logbox: anchors links in error messages 11`] = `"http://nextjs.org/"`;

exports[`ReactRefreshLogBox default logbox: anchors links in error messages 12`] = `"http://example.com/"`;

exports[`ReactRefreshLogBox default module init error not shown 1`] = `
"index.js (4:14) @ eval

  2 | // top offset for snapshot
  3 | import * as React from 'react';
> 4 | throw new Error('no')
    |      ^
  5 | class ClassDefault extends React.Component {
  6 |   render() {
  7 |     return <h1>Default Export</h1>;"
`;

exports[`ReactRefreshLogBox default should strip whitespace correctly with newline 1`] = `
"index.js (9:34) @ onClick

   7 | 
   8 | <a onClick={() => {
>  9 |   throw new Error('idk')
     |        ^
  10 | }}>
  11 |   click me
  12 | </a>"
`;

exports[`ReactRefreshLogBox default unterminated JSX 1`] = `
"./index.js
Error: 
  x Unexpected token. Did you mean \`{'}'}\` or \`&rbrace;\`?
   ,-[5:1]
 5 |               <p>lol</p>
 6 |             div
 7 |           )
 8 |         }
   :         ^
 9 |       
   \`----

  x Unexpected eof
   ,-[6:1]
 6 |             div
 7 |           )
 8 |         }
 9 |       
   \`----

Caused by:
    Syntax Error

Import trace for requested module:
./index.js"
`;
